<resources>
    <string name="app_name">CadFácil</string>
    <string name="consulta_cpfandnis">Consulte os registros de <b>saque</b> do seu <b>Bolsa Família</b> por <b>NIS</b> e <b>Período.</b></string>
    <string name="consulta_safra">Consulte o câmbio da moeda desejada em relação ao <b>Real</b> em uma <b>data específica.</b></string>
    <string name="consulte_seu_beneficio">Consulte Seu Beneficio</string>
    <string name="cpf">CPF</string>
    <string name="nis">NIS</string>
    <string name="periodo">Período</string>
    <string name="cpfInfo">Ex: 12345678901</string>
    <string name="dataInfo">Ex: 202205</string>
    <string name="nisInfo">Insira seu NIS de 11 dígitos</string>
    <string name="periodoInfo">Ex: 03/2024</string>
    <string name="access">Acessar</string>
    <string name="logo">logo</string>
    <string name="consultas_disponiveis">Consultas Disponíveis</string>
    <string name="bolsa_familia">Bolsa Família</string>
    <string name="consultas_anteriores">Histórico</string>
    <string name="title_activity_historico">HistoricoActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="salvar">Salvar</string>
    <string name="excluir">Excluir</string>
    <string name="cotacao">Cotação</string>
    <string name="realizar_nova_consulta">Realizar nova consulta</string>
    <string name="confirmar">Confirmar</string>
    <string name="cancelar">Cancelar</string>
    <string name="digite_seu_nis">Digite seu <b>NIS</b></string>
    <string name="informe_a_data_que_deseja_consultar">Informe a <b>data</b> que deseja consultar</string>
    <string name="selecionar_moeda">Selecionar moeda:</string>
    <string name="selecionar_data">Selecionar data:</string>
</resources>