<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/errorTextView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginBottom="6dp"
        android:textColor="#FF0000"
        android:textSize="16sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textViewNis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/digite_seu_nis"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TextInputLayoutCpf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:hint="@string/cpfInfo"
        app:boxBackgroundMode="filled"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintTextColor="@color/gray">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextInputCpf"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:inputType="number"
            android:maxLength="11"
            android:paddingStart="12dp"
            android:paddingTop="16dp"
            android:paddingEnd="12dp"
            android:paddingBottom="1dp"
            app:boxBackgroundColor="@color/blue_light" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textViewData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/informe_a_data_que_deseja_consultar"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TextInputLayoutData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:hint="@string/dataInfo"
        app:boxBackgroundMode="filled"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintTextColor="@color/gray">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextInputData"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:inputType="number"
            android:maxLength="6"
            android:paddingStart="12dp"
            android:paddingTop="16dp"
            android:paddingEnd="12dp"
            android:paddingBottom="1dp"
            app:boxBackgroundColor="@color/blue_light" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnNisCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#FF0000"
            android:text="@string/cancelar" />

        <Button
            android:id="@+id/btnNisConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/confirmar" />

    </LinearLayout>


</LinearLayout>