<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCPF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="18dp"
        android:layout_marginRight="24dp"
        android:backgroundTint="@color/green"
        android:elevation="8dp"
        android:text="@string/cpf"
        app:cornerRadius="16dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNIS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="24dp"
        android:backgroundTint="@color/green"
        android:elevation="8dp"
        android:text="@string/nis"
        app:cornerRadius="16dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPeriodo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="24dp"
        android:backgroundTint="@color/green"
        android:elevation="8dp"
        android:text="@string/periodo"
        app:cornerRadius="16dp" />
</LinearLayout>